message(STATUS "Building tests")

set(PRT_Pre Test.h testscene.inl)

macro(push_test name files)
	set(options USES_LOADER NO_ADD)
	set(oneValueArgs)
	set(multiValueArgs)
	cmake_parse_arguments(__args "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN} )

	set(TARGET pr_test_${name})
	add_executable(${TARGET} ${files} ${PRT_Pre})
	target_link_libraries(${TARGET} PRIVATE pr_lib_core)
	if(__args_USES_LOADER)
		target_link_libraries(${TARGET} PRIVATE pr_lib_loader)
	endif()
	add_lto(${TARGET})
	strip_binary(${TARGET})
	if(NOT __args_NO_ADD)
		add_test(NAME ${name} COMMAND ${TARGET})
	endif()
endmacro(push_test)

push_test(bits bits.cpp)
push_test(boundingbox boundingbox.cpp)
push_test(brdf brdf.cpp)
push_test(compression compression.cpp)
push_test(concentric concentric.cpp)
push_test(curve curve.cpp)
push_test(distribution distribution.cpp)
push_test(entity entity.cpp)
push_test(fresnel fresnel.cpp)
push_test(generator generator.cpp)
push_test(lpe lpe.cpp)
push_test(materials materials.cpp USES_LOADER)
push_test(memory memory.cpp)
push_test(microfacets microfacets.cpp)
push_test(network network.cpp NO_ADD)
push_test(normal normal.cpp)
push_test(ntree ntree.cpp)
push_test(parameter parameter.cpp USES_LOADER)
push_test(photon photon.cpp)
push_test(plane plane.cpp)
push_test(pointkdtree pointkdtree.cpp)
push_test(quadric quadric.cpp)
push_test(quicksort quicksort.cpp)
push_test(radixsort radixsort.cpp)
push_test(random random.cpp)
push_test(sampling sampling.cpp)
push_test(scattering scattering.cpp)
push_test(sphere sphere.cpp)
push_test(tangent tangent.cpp)
push_test(triangulation triangulation.cpp)
push_test(upsampler upsampler.cpp USES_LOADER)

if(PR_HAS_PYTHON_API AND PR_BUILD_TESTS_PYTHON)
	add_subdirectory(python)
endif()