add_subdirectory(img2coeff)
add_subdirectory(imgcmp)
add_subdirectory(imgdiff)
add_subdirectory(imgsplit)
add_subdirectory(imgtonemap)
add_subdirectory(splitprc)
add_subdirectory(control)

if(PR_HAS_UI)
if(PR_WITH_DIAGNOSTIC)
add_subdirectory(diagnostic)
endif()
#add_subdirectory(materiallab)
endif()