add_subdirectory(img2coeff)
add_subdirectory(imgcmp)
add_subdirectory(imgdiff)
add_subdirectory(imgsplit)
add_subdirectory(imgtonemap)
add_subdirectory(splitprc)
add_subdirectory(control)

if(TARGET pr_lib_ui)
    if(TARGET Qt5::Charts)
        add_subdirectory(diagnostic)
    else()
        message(WARNING "Skipping Qt based diagnostic tool as Qt5 Charts library is missing")
    endif()
    add_subdirectory(materiallab)
else()
    message(WARNING "Skipping Qt based tools")
endif()